hphp/hack/test/typecheck/this_tparam2.php.exp
File "this_tparam2.php", line 27, characters 10-24:
Invalid return type (Typing[4110])
File "this_tparam2.php", line 26, characters 48-62:
This is an object of type OtherPreparable
File "this_tparam2.php", line 26, characters 20-31:
It is incompatible with an object of type MyPreparable
